--- a/src/components/BannerCardItem/index.css
+++ b/src/components/BannerCardItem/index.css
@@ -5,14 +5,18 @@
 
 .card-2 {
   display: flex;
+  flex-direction: column;
   justify-content: flex-end;
+  align-items: flex-end;
   background-image: url('https://assets.ccbp.in/frontend/react-js/reusable-banners-card-2-bg.png');
   background-size: cover;
 }
 
 .card-3 {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   text-align: center;
   background-image: url('https://assets.ccbp.in/frontend/react-js/reusable-banners-card-3-bg.png');
   background-size: cover;
@@ -36,5 +40,7 @@
   border-width: 1px;
   color: #326a9d;
   font-family: 'Roboto';
-  font-size: 18px;
+  font-size: 13px;
+  height: 40px;
+  width: 100px;
 }
